# rust-music

./: Cargo.toml  README.md
music/: Cargo.toml  README.md
music/examples/: collections.rs  generate_lilypond.rs  primitives.rs
music/src/: error.rs  lib.rs
music/src/fretboard/: fretted_note.rs  mod.rs
music/src/fretboard/fretboard_shape/: chord_shape_search.rs  melodic_shape_search.rs  mod.rs
music/src/notation/: clef.rs  duration.rs  mod.rs  rhythm.rs  vextab.rs
music/src/notation/lilypond/: command.rs  common_types.rs  error.rs  fretboard_diagram.rs  mod.rs  scoring.rs  staff_elements.rs  templates.rs
music/src/notation/lilypond/document/: mod.rs  score.rs  staff.rs  tab_staff.rs
music/src/notation/rhythm/: duration.rs  meter.rs  mod.rs
music/src/note/: mod.rs  note.rs  pc.rs  pitch.rs  pitch_class.rs  spelling.rs
music/src/note_collections/: four_note_chords.rs  geometry.rs  interval_class.rs  mod.rs  octave_partition.rs  pc_set.rs  spelling.rs  three_note_chords.rs  voicing.rs
music/src/note_collections/chord_name/: mod.rs
music/src/note_collections/chord_name/naming_heuristics/: alts_and_extensions.rs  aug_qualities.rs  dim_qualities.rs  inferred_third_qualities.rs  maj_and_min_qualities.rs  mod.rs  scale_qualities.rs  sus_qualities.rs
music/src/note_collections/chord_name/quality/: chord.rs  mod.rs  scale.rs
music/src/note_collections/geometry/: contour.rs  mod.rs  sets.rs
music/src/note_collections/geometry/symmetry/: intervallic.rs  mod.rs  transpositional.rs  voiceleading.rs
musical-combinatorics/: Cargo.toml
src/: fretboard.rs  (+4 more)
(+70 files in other folders)
