[package]
name = "music"
version = "0.1.0"
edition = "2021"

[lib]

[[example]]
name = "primitives"

[[example]]
name = "collections"

[features]
default=[]
lilypond = ["dep:tera", "dep:serde"]

[dependencies]
itertools = "0.10.5"
once_cell = "1.16.0"
tera = { version = "1.17.1", optional = true}
serde = { version = "1.0.148", features = [ "derive" ], optional = true }
thiserror = "1.0.37"
